--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-modal-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://k18382003.github.io/react-modal-demo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
